# erc-framework

./: .env.example  .gitignore  AUDIT_REPORT.md  Cargo.toml  Dockerfile.gateway  Dockerfile.query-api  FEATURE_VERIFICATION.md  FINAL_REVIEW.md  FIX_REVIEW.md  LICENSE  QUICKSTART.md  README.md  build.ps1  docker-compose.yml  enterprise-deployment.md
docs/: EVENTS.md  SCHEMA.md
erc/: traccia_adapter.py
erc-core/: Cargo.toml
erc-core/src/: crypto.rs  event.rs  lib.rs  merkle.rs  receipt.rs
erc-gateway/: Cargo.toml
erc-gateway/src/: main.rs  proxy.rs  recorder.rs  types.rs
erc-query-api/: Cargo.toml
erc-query-api/src/: main.rs
erc-store/: Cargo.toml  lib.rs
erc-store/src/: lib.rs
public/: deploy-wizard.html  trace-viewer.html
schemas/: err-v1.schema.json
tests/: test_traccia_adapter.py
