[package]
name = "erc-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "erc_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
ed25519-dalek = "2.1"
zeroize = { version = "1.7", features = ["derive"] }
bincode = "1.3"

[features]
default = ["python"]
python = ["pyo3"]