[package]
name = "erc-store"
version = "0.1.0"
edition = "2021"

[lib]
name = "erc_store"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
erc-core = { path = "../erc-core" }
tracing = "0.1"
